# qnap-img-shrink

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_INTEGRATION.md  TODO.md  app.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt
docs/: API.md  CONVERTER2.md  CONVERTER_SELECTION.md  DEPLOYMENT.md  QNAP_DEPLOYMENT.md  REFACTORING_NOTES.md  SIGNAL_HANDLING.md
etc/: config.yaml
qimgshrink/: __init__.py  converter.py  converter2.py  converter_factory.py  files.py  main.py
tests/: test_app.py  test_config.py  test_converter.py  test_converter2.py  test_converter_factory.py  test_file_find.py
